--- a/index.html
+++ b/index.html
@@ -1,100 +1,20 @@
 <!DOCTYPE html>
-
 <html lang="pt-BR">
-
 <head>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="tags html">
-    <title>Curso | html</title>
+    <meta name="description" content="Projeto feito em html e css">
+    <title>Projeto | HTML-CSS</title>
 </head>
-
 <body>
     <header>
-        <h1>Aprendendo HTML5</h1>
-        <p>Estou Aprendendo <strong>html e css,</strong> vamos juntos?</p>
-    </header>
-
-    <nav>
-        <a href="https://www.youtube.com/" target="_blank">YouTube</a><br>
-        <a href="https://github.com/BrennoAlenkar" target="_blank">GitHub</a><br>
-        <a href="https://cursos.alura.com.br/onboarding/content" target="_blank">Alura</a><br>
-        <a href="https://www.nike.com.br/?utm_source=google&utm_medium=cpc&utm_campaign=SN_NIKE-INST-ROAS&gad_source=1&gclid=CjwKCAiA9bq6BhAKEiwAH6bqoFC-9YnhEy_NPsJ7B53lv2-wjSorGdeg9mo3JQhsK07EuTMG2c5LYRoCg48QAvD_BwE&utm_referrer=https://www.google.com/"
-            target="_blank">Nike</a> <br>
-        <a href="page02.html" target="_blank">Segunda Pagina</a>
-    </nav>
-    <div>
-        <p><strong>Lorem ipsum dolor,</strong> sit <em>amet consectetur adipisicing elit.</em> Numquam ex nam, dolorum distinctio natus enim, sed quas maiores <mark>odit officiis ab deleniti eligendi</mark> amet quos deserunt culpa ad consequatur voluptate. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias voluptatibus vitae quod architecto facere, corrupti saepe quae dolorem cupiditate sint, quis illum autem atque eum voluptate eos amet ipsa odit.</p>
         
-        <img src="imagens/HTML5_logo_and_wordmark.svg.png" width="100" alt="">
-        <img src="imagens/CSS3_logo_and_wordmark.svg.png" width="100" alt="">
-        <img src="imagens/png-transparent-js-logo-javascript-thumbnail.png" width="100" alt="">
-    </div>
+    </header>
     <main>
-        <!--Começo pergunta um-->
-        <section>
-            <h2>Qual linguagem a voce mais gosta?</h2>
-            <form>
-                <input type="radio" name="linguagem" id="pergunta1">
-                <label for="pergunta1">html</label><br>
-                <input type="radio" name="linguagem" id="pergunta2">
-                <label for="pergunta2">css</label><br>
-                <input type="radio" name="linguagem" id="pergunta3">
-                <label for="pergunta3">javascript</label><br>
-                <input type="radio" name="linguagem" id="pergunta4">
-                <label for="pergunta4">php</label>
-            </form>
-        </section>
-        <!--Fim pergunta um-->
 
-        <!--Começo pergunta dois-->
-        <section>
-            <h2>Qual destas linguagens são linguagens de programação?</h2>
-            <form>
-                <input type="checkbox" name="" id="html">
-                <label for="html">html</label> <br>
-                <input type="checkbox" name="" id="css">
-                <label for="css">css</label> <br>
-                <input type="checkbox" name="" id="js">
-                <label for="js">javascript</label> <br>
-                <input type="checkbox" name="" id="java">
-                <label for="java">java</label> <br>
-                <input type="checkbox" name="" id="php">
-                <label for="php">php</label>
-            </form>
-            <br>
-
-            <textarea name="" rows="6" placeholder="Digite um comentario" id=""></textarea>
-        </section>
-        <!--Fim pergunta dois-->
-
-        <!--Começo pergunta tres-->
-        <section>
-            <fieldset>
-                <form action="">
-                    <h2>Digite sua senha e seu e-mail</h2>
-                    <label for="nomeUsuario">Nome:</label>
-                    <input type="text" placeholder="Nome" name="" id="nomeUsuario" required> <br> <br>
-
-                    <label for="email">E-mail:</label>
-                    <input type="email" placeholder="Nome" name="" id="email" required> <br> <br>
-
-                    <label for="senha">Senha:</label>
-                    <input type="password" placeholder="Nome" name="" id="senha" required> <br> <br>
-                    <input type="submit" value="Enviar">
-                </form>
-            </fieldset>
-        </section>
-        <!--Fim pergunta tres-->
-
-        <section>
-        </section>
     </main>
-
     <footer>
-
+        
     </footer>
 </body>
-
 </html>
