--- a/index.html
+++ b/index.html
@@ -20,10 +20,22 @@
             <p><mark>Lorem ipsum, dolor sit amet</mark> consectetur adipisicing elit. Laudantium, facere <abbr title="Linguagens">html, css, javascript</abbr> sint tempora animi nobis nesciunt pariatur.</p>
             <p>Lorem ipsum, <br> dolor sit amet consectetur adipisicing elit. Atque tenetur, at molestias consectetur, optio ullam ut rem reprehenderit quae.</p>
         </section>
-        
+        <!--Pergunta 1: múltipla escolha-->
+        <section>
+            <h2>Pergunta 1: Qual linguagem é usada para estruturar páginas web?</h2>
+            <form>
+                <input type="radio" name="pergunta1" value="Python" id="p1a">
+                <label for="p1a">Python</label> <br>
+                <input type="radio" name="pergunta1" value="Pytohn" id="p1b">
+                <label for="p1b">JavaScript</label> <br>
+                <input type="radio" name="pergunta1" value="Python" id="p1c">
+                <label for="p1c">HTML</label> <br>
+                <input type="radio" name="pergunta1" value="Python" id="p1d">
+                <label for="p1d">Java</label> 
+            </form>
+        </section>
     </main>
     <footer>
-        
     </footer>
 </body>
 </html>
