--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
                 <label for="p1d">Java</label> 
             </form>
         </section>
+        <!--Pergunta 3: texto-->
+        <section>
+            <h2>Pergunta 2: Na URL https://wwww.google.com é o...</h2>
+            <form>
+                <label for="p2">Resposta:</label>
+                <input placeholder="Digite a URL" id="p2" type="text">
+            </form>
+        </section>
     </main>
     <footer>
     </footer>
