--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
                 <input placeholder="Digite a URL" id="p2" type="text">
             </form>
         </section>
+        <!--Pergunta 3: Senha-->
+        <section>
+            <h2>Pergunta 3: Escreve um exemplo de senha forte</h2>
+            <form>
+                <label for="p3">Senha:</label>
+                <input type="password" placeholder="Digite sua senha" name="pergunta3" id="p3">
+            </form>
+        </section>
+
     </main>
     <footer>
     </footer>
