--- a/index.html
+++ b/index.html
@@ -50,7 +50,13 @@
                 <input type="password" placeholder="Digite sua senha" name="pergunta3" id="p3">
             </form>
         </section>
-
+        <!--Pergunta 4: Data-->
+        <section>
+            <h2>Pergunta 4: Em que ano o html foi criado?</h2>
+            <form>
+                <input type="date" name="pergunta4" id="p4">
+            </form>
+        </section>
     </main>
     <footer>
     </footer>
