--- a/index.html
+++ b/index.html
@@ -57,6 +57,26 @@
                 <input type="date" name="pergunta4" id="p4">
             </form>
         </section>
+        <!--Pergunta 5: seleção múltipla-->
+        <section>
+            <h2>pergunta 5: Quais dessas tenologias são consideradas linguagens de programação?</h2>
+            <form>
+                <input type="checkbox" name="pergunta5" value="Python" id="p5a">
+                <label for="p5a">Python</label>
+                <br>
+                <input type="checkbox" name="pergunta5" value="HTML" id="p5b">
+                <label for="p5b">HTML</label>
+                <br>
+                <input type="checkbox" name="pergunta5" value="JavaScript" id="p5c">
+                <label for="p5c">JavaScript</label>
+                <br>
+                <input type="checkbox" name="pergunta5" value="Php" id="p5d">
+                <label for="p5d">Php</label>
+                <br>
+                <input type="checkbox" name="pergunta5" value="CSS" id="p5e">
+                <label for="p5e">CSS</label>
+            </form>
+        </section>
     </main>
     <footer>
     </footer>
