--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Projeto feito em html e css">
     <title>Quiz para programadores</title>
 </head>
+
 <body>
     <header>
         <h1>Quiz interativo para programadores</h1>
@@ -16,9 +18,12 @@
         <!--textos-->
         <section>
             <h2>Sobre esse quiz</h2>
-            <p><strong>Lorem ipsum dolor</strong> sit amet <em>consectetur adipisicing</em> elit. Molestiae iure reiciendis, aspernatur obcaecati fuga id provident dolores illo in nemo.</p>
-            <p><mark>Lorem ipsum, dolor sit amet</mark> consectetur adipisicing elit. Laudantium, facere <abbr title="Linguagens">html, css, javascript</abbr> sint tempora animi nobis nesciunt pariatur.</p>
-            <p>Lorem ipsum, <br> dolor sit amet consectetur adipisicing elit. Atque tenetur, at molestias consectetur, optio ullam ut rem reprehenderit quae.</p>
+            <p><strong>Lorem ipsum dolor</strong> sit amet <em>consectetur adipisicing</em> elit. Molestiae iure
+                reiciendis, aspernatur obcaecati fuga id provident dolores illo in nemo.</p>
+            <p><mark>Lorem ipsum, dolor sit amet</mark> consectetur adipisicing elit. Laudantium, facere <abbr
+                    title="Linguagens">html, css, javascript</abbr> sint tempora animi nobis nesciunt pariatur.</p>
+            <p>Lorem ipsum, <br> dolor sit amet consectetur adipisicing elit. Atque tenetur, at molestias consectetur,
+                optio ullam ut rem reprehenderit quae.</p>
         </section>
         <!--Pergunta 1: múltipla escolha-->
         <section>
@@ -31,7 +36,7 @@
                 <input type="radio" name="pergunta1" value="Python" id="p1c">
                 <label for="p1c">HTML</label> <br>
                 <input type="radio" name="pergunta1" value="Python" id="p1d">
-                <label for="p1d">Java</label> 
+                <label for="p1d">Java</label>
             </form>
         </section>
         <!--Pergunta 3: texto-->
@@ -77,8 +82,18 @@
                 <label for="p5e">CSS</label>
             </form>
         </section>
+        <!--Pergunta 6-->
+        <section>
+            <h2>
+                Pergunta 6: faça o upload de um arquivo contendo código HTML
+            </h2>
+            <form>
+                <input type="file" name="pergunta6" id="p6">
+            </form>
+        </section>
     </main>
     <footer>
     </footer>
 </body>
+
 </html>
