--- a/index.html
+++ b/index.html
@@ -82,13 +82,25 @@
                 <label for="p5e">CSS</label>
             </form>
         </section>
-        <!--Pergunta 6-->
+        <!--Pergunta 6: uploud de arquivo-->
         <section>
             <h2>
                 Pergunta 6: faça o upload de um arquivo contendo código HTML
             </h2>
             <form>
                 <input type="file" name="pergunta6" id="p6">
+            </form>
+        </section>
+        <!--Pergunta 7: menu suspenso-->
+        <section>
+            <h2>Pergunta 7: Selecione o atributo do input que define o seu tipo:</h2>
+            <form>
+                <select name="pergunta7" id="p7">
+                    <option selected disabled value="pergunta7">Selecione</option>
+                    <option value="id">id</option>
+                    <option value="type">Type</option>
+                    <option value="placeholder">placeholder</option>
+                </select>
             </form>
         </section>
     </main>
