--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
         <h1>Quiz interativo para programadores</h1>
         <p>Teste seus conhecimentos em programação! </p>
         <hr>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Contato</a></li>
+                <li><a href="#">Compras</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <!--textos-->
