--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Projeto feito em html e css">
+    <link rel="stylesheet" href="css/index.css">
     <title>Quiz para programadores</title>
 </head>
 
@@ -110,6 +111,23 @@
                     <option value="placeholder">placeholder</option>
                 </select>
             </form>
+        </section>
+        <!--Pergunta 8: imagem-->
+        <section>
+            <h2>Pergunta 8: Qual linguagem de programação é representada pelo logotipo abaixo:</h2>
+            <img
+             src="imagens/HTML5_logo_and_wordmark.svg.png"
+             alt="Logotipo da Linguagem HTML"
+             width="100px">
+             <img 
+             src="imagens/CSS3_logo_and_wordmark.svg.png"
+             alt="Logotipo da linguagem CSS"
+             width="74px">
+             <img 
+             src="imagens/png-transparent-js-logo-javascript-thumbnail.png" alt="Logotipo da linguagem JavaScript"
+             width="80px"> <br><br>
+             <label for="p8">Digite: </label>
+             <input type="text" id="p8" placeholder="Digite sua resposta">
         </section>
     </main>
     <footer>
