--- a/index.html
+++ b/index.html
@@ -129,6 +129,43 @@
              <label for="p8">Digite: </label>
              <input type="text" id="p8" placeholder="Digite sua resposta">
         </section>
+        <!--Tabela de linguagem-->
+        <section>
+            <h2>Tabela das Linguagens de Programação Mais Usadas:</h2>
+            <table width="100%" border="1" style="text-align: center;">
+                <tr>
+                    <th>JavaScript</th>
+                    <th>Python</th>
+                    <th>Java</th>
+                    <th>C#</th>
+                </tr>
+                <tr>
+                    <td>Desenvolvimento Web</td>
+                    <td>Inteligência Artificial</td>
+                    <td>Desenvolvimento de Apps</td>
+                    <td>Aplicações Empresariais</td>
+                </tr>
+                <tr>
+                    <td>Front-End</td>
+                    <td>Automação</td>
+                    <td>Aplicações Android</td>
+                    <td>Desenvolvimento de Jogos</td>
+                </tr>
+                <tr>
+                    <td>Frameworks como React e Vue</td>
+                    <td>Machine Learning</td>
+                    <td>Microserviços</td>
+                    <td>Desenvolvimento de APIs</td>
+                </tr>
+                <tr>
+                    <td>Bibliotecas como Node.js</td>
+                    <td>Data Science</td>
+                    <td>Aplicações Web</td>
+                    <td>Desenvolvimento Desktop</td>
+                </tr>
+            </table>
+            
+        </section>
     </main>
     <footer>
     </footer>
