--- a/index.html
+++ b/index.html
@@ -166,6 +166,23 @@
             </table>
             
         </section>
+        <!--Lista de respostas-->
+        <section>
+            <h2>Verifique suas respostas:</h2>
+            <details>
+                <summary>Clique para ver as respostas</summary>
+                <ol>
+                    <li>HTML</li>
+                    <li>Dominio</li>
+                    <li>abc@100</li>
+                    <li>1991</li>
+                    <li>JavaScript</li>
+                    <li>Arquivos.html</li>
+                    <li>Type</li>
+                    <li>HTML, CSS, JavaScript</li>
+                </ol>
+            </details>
+        </section>
     </main>
     <footer>
     </footer>
