--- a/index.html
+++ b/index.html
@@ -183,6 +183,27 @@
                 </ol>
             </details>
         </section>
+        <!--Formulario-->
+        <section>
+            <h2>Formulario de cadastro</h2>
+            <fieldset>
+                <legend>Formulario</legend>
+            <form>
+                <label for="email-usuario">E-mail:</label>
+                <input type="email" placeholder="Digite seu E-mail" name="gmail" id="email-usuario" required>
+                <br> <br>
+                <label for="senha">Senha:</label>
+                <input type="password" name="senha" placeholder="Digite sua senha" id="senha" required>
+                <br> <br>
+                <input type="checkbox" name="check" id="check-usuario" required>
+                <label for="check-usuario">Aceita os termos?</label>
+                <br> <br>
+                <textarea name="texto" rows="5" id="texto-area"></textarea>
+                <br> <br>
+                <input type="submit" value="Enviar">
+            </form>
+        </fieldset>
+        </section>
     </main>
     <footer>
     </footer>
