--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 <input type="checkbox" name="check" id="check-usuario" required>
                 <label for="check-usuario">Aceita os termos?</label>
                 <br> <br>
-                <textarea name="texto" rows="5" id="texto-area"></textarea>
+                <textarea name="texto" cols="50" placeholder="Deixe um comentario" rows="5" id="texto-area"></textarea>
                 <br> <br>
                 <input type="submit" value="Enviar">
             </form>
