--- a/index.html
+++ b/index.html
@@ -206,6 +206,8 @@
         </section>
     </main>
     <footer>
+        <p> &copy; Site criado por <a href="https://www.linkedin.com/in/brenno-alencar-955460256/" target="_blank">Brenno Alencar</a> para seu <a href="https://github.com/BrennoAlenkar" target="_blank">GitHub</a></p>
+        <p>Programação mudou minha vida!</p>
     </footer>
 </body>
 
