--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 <br> <br>
                 <textarea name="texto" cols="50" placeholder="Deixe um comentario" rows="5" id="texto-area"></textarea>
                 <br> <br>
-                <input type="submit" value="Enviar">
+                <input type="submit" value="Enviar" onclick="alert('Cadastro feito!')">
             </form>
         </fieldset>
         </section>
